--- a/incubator/fluentd-elasticsearch/values.yaml
+++ b/incubator/fluentd-elasticsearch/values.yaml
@@ -2,11 +2,22 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 image:
-  repository: fluent/fluentd-kubernetes-daemonset
+  repository: quay.io/coreos/fluentd-kubernetes
   tag: v0.12-debian-elasticsearch
   pullPolicy: IfNotPresent
 
 configFile: fluentd-standalone.conf
+
+config:
+  systemd:
+    enabled: true
+  prometheus:
+    enabled: true
+  kubernetes:
+    enabled: true
+  apiserverAudit:
+    enabled: true
+
 elasticsearch:
   host: elasticsearch-client.default.svc.cluster.local
   port: 9200
