--- a/stable/pachyderm/templates/pachd_secret.yaml
+++ b/stable/pachyderm/templates/pachd_secret.yaml
@@ -18,16 +18,16 @@ data:
   minio-secure: {{ .Values.s3.secure | b64enc | quote }}
   minio-signature: {{ .Values.s3.signature | b64enc | quote }}
   {{- else if eq .Values.credentials "google" }}
-  google-bucket: { .Values.google.bucketName | b64enc | quote }}
+  google-bucket: {{ .Values.google.bucketName | b64enc | quote }}
   {{- else if eq .Values.credentials "amazon" }}
-  amazon-bucket: { .Values.amazon.bucketName | b64enc | quote }}
-  amazon-distribution: { .Values.amazon.distribution | b64enc | quote }}
-  amazon-id: { .Values.amazon.id | b64enc | quote }}
-  amazon-region: { .Values.amazon.region | b64enc | quote }}
-  amazon-secret: { .Values.amazon.secret | b64enc | quote }}
-  amazon-token: { .Values.amazon.token | b64enc | quote }}
+  amazon-bucket: {{ .Values.amazon.bucketName | b64enc | quote }}
+  amazon-distribution: {{ .Values.amazon.distribution | b64enc | quote }}
+  amazon-id: {{ .Values.amazon.id | b64enc | quote }}
+  amazon-region: {{ .Values.amazon.region | b64enc | quote }}
+  amazon-secret: {{ .Values.amazon.secret | b64enc | quote }}
+  amazon-token: {{ .Values.amazon.token | b64enc | quote }}
   {{- else if eq .Values.credentials "microsoft" }}
-  microsoft-container: { .Values.microsoft.container | b64enc | quote }}
-  microsoft-id: { .Values.microsoft.id | b64enc | quote }}
-  microsoft-secret: { .Values.microsoft.secret | b64enc | quote }}
+  microsoft-container: {{ .Values.microsoft.container | b64enc | quote }}
+  microsoft-id: {{ .Values.microsoft.id | b64enc | quote }}
+  microsoft-secret: {{ .Values.microsoft.secret | b64enc | quote }}
   {{- end }}
