--- a/stable/wordpress/templates/deployment.yaml
+++ b/stable/wordpress/templates/deployment.yaml
@@ -113,9 +113,7 @@ spec:
             port: https
             scheme: HTTPS
           {{- end }}
-          initialDelaySeconds: 120
-          timeoutSeconds: 5
-          failureThreshold: 6
+{{ toYaml .Values.livenessProbe | indent 10 }}
         readinessProbe:
           httpGet:
             path: /wp-login.php
@@ -125,9 +123,7 @@ spec:
             port: https
             scheme: HTTPS
           {{- end }}
-          initialDelaySeconds: 30
-          timeoutSeconds: 3
-          periodSeconds: 5
+{{ toYaml .Values.readinessProbe | indent 10 }}
         volumeMounts:
         - mountPath: /bitnami/apache
           name: wordpress-data
