--- a/stable/wordpress/values.yaml
+++ b/stable/wordpress/values.yaml
@@ -125,6 +125,21 @@ serviceType: LoadBalancer
 ## Allow health checks to be pointed at the https port
 healthcheckHttps: false
 
+## Configure extra options for liveness and readiness probes
+## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/#configure-probes)
+livenessProbe:
+  initialDelaySeconds: 120
+  periodSeconds: 10
+  timeoutSeconds: 5
+  failureThreshold: 6
+  successThreshold: 1
+readinessProbe:
+  initialDelaySeconds: 30
+  periodSeconds: 10
+  timeoutSeconds: 5
+  failureThreshold: 6
+  successThreshold: 1
+
 ## Configure ingress resource that allow you to access the
 ## Wordpress instalation. Set up the URL
 ## ref: http://kubernetes.io/docs/user-guide/ingress/
