--- a/stable/heapster/values.yaml
+++ b/stable/heapster/values.yaml
@@ -11,6 +11,11 @@ image:
 #   kubernetes.io/name: "Heapster"
 labels: {}
 
+## Here labels can be added to the heapster deployment
+# annotations:
+#   scheduler.alpha.kubernetes.io/critical-pod: ''
+annotations: {}
+
 ## Node labels for pod assignment
 ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
 ##
