--- a/stable/grafana/templates/job.yaml
+++ b/stable/grafana/templates/job.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: {{ template "grafana.server.fullname" . }}-set-datasource
-        image: "{{ .Values.server.setDatasource.image }}"
+        image: "{{ default "appropriate/curl:latest" .Values.server.setDatasource.image }}"
         env:
         - name: ADMIN_USER
           valueFrom:
@@ -40,7 +40,7 @@ spec:
           - "Content-Type: application/json;charset=UTF-8"
           - "--data-binary"
           {{- with .Values.server.setDatasource.datasource }}
-          - "{\"name\":\"{{ .name }}\",\"type\":\"{{ .type }}\",\"url\":\"{{ .url }}\",\"database\":\"{{ .database }}\",\"jsonData\":{ {{ .jsonData }} },\"access\":\"{{ .access }}\",\"isDefault\":{{ .isDefault }}}"
+          - "{\"name\":\"{{ default "default" .name }}\",\"type\":\"{{ default "prometheus" .type }}\",\"url\":\"{{ .url }}\",\"database\":\"{{ .database }}\",\"jsonData\":{ {{ .jsonData }} },\"access\":\"{{ default "proxy" .access }}\",\"isDefault\":{{ default "true" .isDefault }}}"
           {{- end }}
-      restartPolicy: {{ .Values.server.setDatasource.restartPolicy }}
+      restartPolicy: {{ default "OnFailure" .Values.server.setDatasource.restartPolicy }}
 {{- end -}}
