--- a/incubator/jaeger/templates/collector-svc.yaml
+++ b/incubator/jaeger/templates/collector-svc.yaml
@@ -18,15 +18,15 @@ spec:
   - name: jaeger-collector-tchannel
     port: {{ .Values.collector.service.tchannelPort }}
     protocol: TCP
-    targetPort: 14267
+    targetPort: tchannel
   - name: jaeger-collector-http
     port: {{ .Values.collector.service.httpPort }}
     protocol: TCP
-    targetPort: 14268
+    targetPort: http
   - name: jaeger-collector-zipkin
     port: {{ .Values.collector.service.zipkinPort }}
     protocol: TCP
-    targetPort: 9411
+    targetPort: zipkin
   selector:
     app: "{{ template "jaeger.name" . }}"
     component: "collector"
