enable adjusting agent replicas and ensure deployments are updated when shared secret changes

--- a/incubator/drone/templates/deployment-agent.yaml
+++ b/incubator/drone/templates/deployment-agent.yaml
@@ -9,9 +9,11 @@ metadata:
     heritage: "{{ .Release.Service }}"
     component: agent
 spec:
-  replicas: 1
+  replicas: {{ .Values.agent.replicas }}
   template:
     metadata:
+      annotations:
+        checksum/secrets: {{ include (print $.Template.BasePath "/secrets.yaml") . | sha256sum }}
       labels:
         app: {{ template "drone.name" . }}
         release: "{{ .Release.Name }}"
