--- a/incubator/anchore-engine/values.yaml
+++ b/incubator/anchore-engine/values.yaml
@@ -17,7 +17,7 @@ image:
 
 # Used to create Ingress record (should used with service.type: ClusterIP or NodePort depending on platform)
 ingress:
-  enabled: "False"
+  enabled: false
   annotations: {}
     # kubernetes.io/ingress.allow-http: False
     # kubernetes.io/ingress.class: nginx
@@ -29,7 +29,7 @@ ingress:
 
 # Dependency on Postgresql, configure here
 postgresql:
-  enabled: "True"
+  enabled: true
   postgresUser: anchoreengine
   postgresPassword: anchore-postgres,123
   postgresDatabase: anchore
@@ -45,32 +45,32 @@ globalConfig:
   dbConfig:
     timeout: 120
     # Use ssl, but the default postgresql config in helm's stable repo does not support ssl on server side, so this should be set for external dbs only for the time being
-    ssl: "False"
+    ssl: false
     connectionPoolSize: 30
     connectionPoolMaxOverflow: 100
 
   # Cleanup local images used during analysis, defaults to True. If set to false, images will remain on workers after analysis.
-  cleanupImages: "True"
+  cleanupImages: true
 
   # If True, if a user adds an ECR registry with username = awsauto then the system will look for an instance profile to use for auth against the registry
-  allowECRUseIAMRole: "False"
+  allowECRUseIAMRole: false
 
   # User configuration. Add more users here if needed.
   users:
     admin:
       password: foobar
       email: admin@myemail.com
-      policyBundleSyncEnabled: "False"
+      policyBundleSyncEnabled: false
 
       # Credentials for https://anchore.io Cloud service if you have them. Can be used to automatically sync policy bundles.
       anchoreIOCredentials:
         # If use_anonymous = False, the specific credentials are used for the feed sync and bundle sync features otherwise disregarded.
-        useAnonymous: "True"
+        useAnonymous: true
         user: someuser
         password: somepassword
 
-  internalServicesSslEnabled: "False"
-  internalServicesSslVerifyCerts: "False"
+  internalServicesSslEnabled: false
+  internalServicesSslVerifyCerts: false
 
   # Intervals to run specific events on (seconds)
   cycleTimers:
@@ -97,7 +97,7 @@ coreConfig:
   replicaCount: 1
   hostId: "anchore-engine-core-host"
   logLevel: INFO
-  policyBundleSyncEnabled: "False"
+  policyBundleSyncEnabled: false
 
   ssl:
     # To use certs for TLS directly from the services, create a secret with keys that match the values fo certSecretKey and certSecretCert
@@ -114,7 +114,7 @@ coreConfig:
       # User and password to be set (using HTTP basic auth) on all webhook calls if necessary
       user: null
       password: null
-      ssl_verify: "True"
+      ssl_verify: true
 
       # Endpoint for general notification delivery. These events are image/tag updates etc. This is globally configured
       # and updates for all users are sent to the same host but with a different path for each user.
