Fixes for truthy values in other yaml configs for anchore-engine chart

--- a/incubator/anchore-engine/templates/core_deployment.yaml
+++ b/incubator/anchore-engine/templates/core_deployment.yaml
@@ -68,7 +68,7 @@ spec:
         {{- if .Values.globalConfig.internalServicesSslEnabled }}
         - name: certs
           mountPath: {{ default "/certs" .Values.coreConfig.ssl.certDir }}
-          readOnly: True
+          readOnly: true
         {{- end }}
         readinessProbe:
           httpGet:
