Add ability to pass boolean args to cluster-autoscaler like logtostderr

--- a/stable/cluster-autoscaler/templates/deployment.yaml
+++ b/stable/cluster-autoscaler/templates/deployment.yaml
@@ -39,7 +39,7 @@ spec:
             - --nodes={{ .minSize }}:{{ .maxSize }}:{{ .name }}
           {{- end }}
           {{- range $key, $value := .Values.extraArgs }}
-            - --{{ $key }}={{ $value }}
+            - --{{ $key }}{{ if $value }}={{ $value }}{{ end }}
           {{- end }}
           env:
           {{- if eq .Values.cloudProvider "aws" }}
