fixed configmap for fluentd 1.1.0

--- a/incubator/fluentd-elasticsearch/templates/clusterrole.yaml
+++ b/incubator/fluentd-elasticsearch/templates/clusterrole.yaml
@@ -2,11 +2,14 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ template "fluentd-elasticsearch .fullname" . }}
+  name: {{ template "fluentd-elasticsearch.fullname" . }}
   labels:
-    k8s-app: {{ template "fluentd-elasticsearch .fullname" . }}
+    app: {{ template "fluentd-elasticsearch.name" . }}
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
+    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
 rules:
 - apiGroups:
   - ""
