--- a/incubator/fluentd-elasticsearch/templates/configmap.yaml
+++ b/incubator/fluentd-elasticsearch/templates/configmap.yaml
@@ -1,13 +1,19 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "fluentd-elasticsearch .fullname" . }}
+  name: {{ template "fluentd-elasticsearch.fullname" . }}
   labels:
-    app: {{ template "fluentd-elasticsearch .name" . }}
+    app: {{ template "fluentd-elasticsearch.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     heritage: {{ .Release.Service | quote }}
     release: {{ .Release.Name | quote }}
+    addonmanager.kubernetes.io/mode: Reconcile
 data:
+  system.conf: |-
+    <system>
+      root_dir /tmp/fluentd-buffers/
+    </system>
+
   containers.input.conf: |-
     # This configuration file for Fluentd / td-agent is used
     # to watch changes to Docker log files. The kubelet creates symlinks that
@@ -108,26 +114,19 @@ data:
     # CRI Log Example:
     # 2016-02-17T00:04:05.931087621Z stdout F [info:2016-02-16T16:04:05.930-08:00] Some log text here
     <source>
+      @id fluentd-containers.log
       @type tail
       path /var/log/containers/*.log
-      pos_file /var/log/es-containers.log.pos
+      pos_file /var/log/fluentd-containers.log.pos
       time_format %Y-%m-%dT%H:%M:%S.%NZ
       tag raw.kubernetes.*
+      format json
       read_from_head true
-      format multi_format
-      <pattern>
-        format json
-        time_key time
-        time_format %Y-%m-%dT%H:%M:%S.%NZ
-      </pattern>
-      <pattern>
-        format /^(?<time>.+) (?<stream>stdout|stderr) [^ ]* (?<log>.*)$/
-        time_format %Y-%m-%dT%H:%M:%S.%N%:z
-      </pattern>
     </source>
 
     # Detect exceptions in the log output and forward them as one log entry.
     <match raw.kubernetes.**>
+      @id raw.kubernetes
       @type detect_exceptions
       remove_tag_prefix raw
       message log
@@ -136,25 +135,28 @@ data:
       max_bytes 500000
       max_lines 1000
     </match>
+
   system.input.conf: |-
     # Example:
     # 2015-12-21 23:17:22,066 [salt.state       ][INFO    ] Completed state [net.ipv4.ip_forward] at time 23:17:22.066081
     <source>
+      @id minion
       @type tail
       format /^(?<time>[^ ]* [^ ,]*)[^\[]*\[[^\]]*\]\[(?<severity>[^ \]]*) *\] (?<message>.*)$/
       time_format %Y-%m-%d %H:%M:%S
       path /var/log/salt/minion
-      pos_file /var/log/es-salt.pos
+      pos_file /var/log/salt.pos
       tag salt
     </source>
 
     # Example:
     # Dec 21 23:17:22 gke-foo-1-1-4b5cbd14-node-4eoj startupscript: Finished running startup script /var/run/google.startup.script
     <source>
+      @id startupscript.log
       @type tail
       format syslog
       path /var/log/startupscript.log
-      pos_file /var/log/es-startupscript.log.pos
+      pos_file /var/log/startupscript.log.pos
       tag startupscript
     </source>
 
@@ -162,22 +164,24 @@ data:
     # time="2016-02-04T06:51:03.053580605Z" level=info msg="GET /containers/json"
     # time="2016-02-04T07:53:57.505612354Z" level=error msg="HTTP Error" err="No such image: -f" statusCode=404
     <source>
+      @id docker.log
       @type tail
       format /^time="(?<time>[^)]*)" level=(?<severity>[^ ]*) msg="(?<message>[^"]*)"( err="(?<error>[^"]*)")?( statusCode=($<status_code>\d+))?/
       path /var/log/docker.log
-      pos_file /var/log/es-docker.log.pos
+      pos_file /var/log/docker.log.pos
       tag docker
     </source>
 
     # Example:
     # 2016/02/04 06:52:38 filePurge: successfully removed file /var/etcd/data/member/wal/00000000000006d0-00000000010a23d1.wal
     <source>
+      @id etcd.log
       @type tail
       # Not parsing this, because it doesn't have anything particularly useful to
       # parse out of it (like severities).
       format none
       path /var/log/etcd.log
-      pos_file /var/log/es-etcd.log.pos
+      pos_file /var/log/etcd.log.pos
       tag etcd
     </source>
 
@@ -188,6 +192,7 @@ data:
     # Example:
     # I0204 07:32:30.020537    3368 server.go:1048] POST /stats/container/: (13.972191ms) 200 [[Go-http-client/1.1] 10.244.1.3:40537]
     <source>
+      @id kubelet.log
       @type tail
       format multiline
       multiline_flush_interval 5s
@@ -195,13 +200,14 @@ data:
       format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
       time_format %m%d %H:%M:%S.%N
       path /var/log/kubelet.log
-      pos_file /var/log/es-kubelet.log.pos
+      pos_file /var/log/kubelet.log.pos
       tag kubelet
     </source>
 
     # Example:
     # I1118 21:26:53.975789       6 proxier.go:1096] Port "nodePort for kube-system/default-http-backend:http" (:31429/tcp) was open before and is still needed
     <source>
+      @id kube-proxy.log
       @type tail
       format multiline
       multiline_flush_interval 5s
@@ -209,13 +215,14 @@ data:
       format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
       time_format %m%d %H:%M:%S.%N
       path /var/log/kube-proxy.log
-      pos_file /var/log/es-kube-proxy.log.pos
+      pos_file /var/log/kube-proxy.log.pos
       tag kube-proxy
     </source>
 
     # Example:
     # I0204 07:00:19.604280       5 handlers.go:131] GET /api/v1/nodes: (1.624207ms) 200 [[kube-controller-manager/v1.1.3 (linux/amd64) kubernetes/6a81b50] 127.0.0.1:38266]
     <source>
+      @id kube-apiserver.log
       @type tail
       format multiline
       multiline_flush_interval 5s
@@ -223,13 +230,14 @@ data:
       format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
       time_format %m%d %H:%M:%S.%N
       path /var/log/kube-apiserver.log
-      pos_file /var/log/es-kube-apiserver.log.pos
+      pos_file /var/log/kube-apiserver.log.pos
       tag kube-apiserver
     </source>
 
     # Example:
     # I0204 06:55:31.872680       5 servicecontroller.go:277] LB already exists and doesn't need update for service kube-system/kube-ui
     <source>
+      @id kube-controller-manager.log
       @type tail
       format multiline
       multiline_flush_interval 5s
@@ -237,13 +245,14 @@ data:
       format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
       time_format %m%d %H:%M:%S.%N
       path /var/log/kube-controller-manager.log
-      pos_file /var/log/es-kube-controller-manager.log.pos
+      pos_file /var/log/kube-controller-manager.log.pos
       tag kube-controller-manager
     </source>
 
     # Example:
     # W0204 06:49:18.239674       7 reflector.go:245] pkg/scheduler/factory/factory.go:193: watch of *api.Service ended with: 401: The event in requested index is outdated and cleared (the requested history has been cleared [2578313/2577886]) [2579312]
     <source>
+      @id kube-scheduler.log
       @type tail
       format multiline
       multiline_flush_interval 5s
@@ -251,13 +260,14 @@ data:
       format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
       time_format %m%d %H:%M:%S.%N
       path /var/log/kube-scheduler.log
-      pos_file /var/log/es-kube-scheduler.log.pos
+      pos_file /var/log/kube-scheduler.log.pos
       tag kube-scheduler
     </source>
 
     # Example:
     # I1104 10:36:20.242766       5 rescheduler.go:73] Running Rescheduler
     <source>
+      @id rescheduler.log
       @type tail
       format multiline
       multiline_flush_interval 5s
@@ -265,13 +275,14 @@ data:
       format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
       time_format %m%d %H:%M:%S.%N
       path /var/log/rescheduler.log
-      pos_file /var/log/es-rescheduler.log.pos
+      pos_file /var/log/rescheduler.log.pos
       tag rescheduler
     </source>
 
     # Example:
     # I0603 15:31:05.793605       6 cluster_manager.go:230] Reading config from path /etc/gce.conf
     <source>
+      @id glbc.log
       @type tail
       format multiline
       multiline_flush_interval 5s
@@ -279,13 +290,14 @@ data:
       format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
       time_format %m%d %H:%M:%S.%N
       path /var/log/glbc.log
-      pos_file /var/log/es-glbc.log.pos
+      pos_file /var/log/glbc.log.pos
       tag glbc
     </source>
 
     # Example:
     # I0603 15:31:05.793605       6 cluster_manager.go:230] Reading config from path /etc/gce.conf
     <source>
+      @id cluster-autoscaler.log
       @type tail
       format multiline
       multiline_flush_interval 5s
@@ -293,39 +305,54 @@ data:
       format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
       time_format %m%d %H:%M:%S.%N
       path /var/log/cluster-autoscaler.log
-      pos_file /var/log/es-cluster-autoscaler.log.pos
+      pos_file /var/log/cluster-autoscaler.log.pos
       tag cluster-autoscaler
     </source>
 
     # Logs from systemd-journal for interesting services.
     <source>
+      @id journald-docker
       @type systemd
       filters [{ "_SYSTEMD_UNIT": "docker.service" }]
-      pos_file /var/log/journald-docker.pos
+      #pos_file /var/log/journald-docker.pos
+      <storage>
+        @type local
+        persistent true
+      </storage>
       read_from_head true
       tag docker
     </source>
 
     <source>
+      @id journald-kubelet
       @type systemd
       filters [{ "_SYSTEMD_UNIT": "kubelet.service" }]
-      pos_file /var/log/journald-kubelet.pos
+      <storage>
+        @type local
+        persistent true
+      </storage>
       read_from_head true
       tag kubelet
     </source>
 
     <source>
+      @id journald-node-problem-detector
       @type systemd
       filters [{ "_SYSTEMD_UNIT": "node-problem-detector.service" }]
-      pos_file /var/log/journald-node-problem-detector.pos
+      <storage>
+        @type local
+        persistent true
+      </storage>
       read_from_head true
       tag node-problem-detector
     </source>
+
   forward.input.conf: |-
     # Takes the messages sent over TCP
     <source>
       @type forward
     </source>
+
   monitoring.conf: |-
     # Prometheus Exporter Plugin
     # input plugin that exports metrics
@@ -360,6 +387,7 @@ data:
         host ${hostname}
       </labels>
     </source>
+
   output.conf: |-
     # Enriches records with Kubernetes metadata
     <filter kubernetes.**>
@@ -367,20 +395,24 @@ data:
     </filter>
 
     <match **>
-       @type elasticsearch
-       log_level info
-       include_tag_key true
-       host {{ .Values.elasticsearch.host }}
-       port {{ .Values.elasticsearch.port }}
-       logstash_format true
-       # Set the chunk limits.
-       buffer_chunk_limit {{ .Values.elasticsearch.buffer_chunk_limit }}
-       buffer_queue_limit {{ .Values.elasticsearch.buffer_queue_limit }}
-       flush_interval 5s
-       # Never wait longer than 5 minutes between retries.
-       max_retry_wait 30
-       # Disable the limit on the number of retries (retry forever).
-       disable_retry_limit
-       # Use multiple threads for processing.
-       num_threads 2
+      @id elasticsearch
+      @type elasticsearch
+      @log_level info
+      include_tag_key true
+      host {{ .Values.elasticsearch.host }}
+      port {{ .Values.elasticsearch.port }}
+      logstash_format true
+      <buffer>
+        @type file
+        path /var/log/fluentd-buffers/kubernetes.system.buffer
+        flush_mode interval
+        retry_type exponential_backoff
+        flush_thread_count 2
+        flush_interval 5s
+        retry_forever
+        retry_max_interval 30
+        chunk_limit_size {{ .Values.elasticsearch.buffer_chunk_limit }}
+        queue_limit_length {{ .Values.elasticsearch.buffer_queue_limit }}
+        overflow_action block
+      </buffer>
     </match>
