--- a/incubator/fluentd-elasticsearch/templates/service-account.yaml
+++ b/incubator/fluentd-elasticsearch/templates/service-account.yaml
@@ -1,10 +1,11 @@
-{{- if .Values.rbac.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "fluentd-elasticsearch .fullname" . }}
+  name: {{ template "fluentd-elasticsearch.fullname" . }}
   labels:
-    k8s-app: {{ template "fluentd-elasticsearch .fullname" . }}
+    app: {{ template "fluentd-elasticsearch.name" . }}
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
-{{- end -}}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
