Move default values into values.yaml instead of job.yaml

--- a/stable/grafana/values.yaml
+++ b/stable/grafana/values.yaml
@@ -197,12 +197,12 @@ server:
     ## How long should it take to commit failure
     ## Default: 300
     ##
-    # activeDeadlineSeconds: 300
+    activeDeadlineSeconds: 300
 
     ## Curl Docker image
     ## Default: appropriate/curl:latest
     ##
-    # image: appropriate/curl:latest
+    image: appropriate/curl:latest
 
     ## This assembles how curl post into Grafana
     ## Ref1: http://docs.grafana.org/reference/http_api/#create-data-source
@@ -211,12 +211,12 @@ server:
     # datasource:
       ## The datasource name.
       ## Default: default
-      # name: default
+      name: default
 
       ## Type of datasource
       ## Default: prometheus
       ##
-      # type: prometheus
+      type: prometheus
 
       ## The url of the datasource. To set correctly you need to know
       ## the right datasource name and its port ahead. Check kubernetes
@@ -240,17 +240,17 @@ server:
       ## Specify if Grafana has to go thru proxy to reach datasource
       ## Default: proxy
       ##
-      # access: proxy
+      access: proxy
 
       ## Specify should Grafana use this datasource as default
       ## Default: true
       ##
-      # isDefault: true
+      isDefault: true
 
     ## Specify the job policy
     ## Default: OnFailure
     ##
-    # restartPolicy: OnFailure
+    restartPolicy: OnFailure
 
 ## Grafana config file ConfigMap entry
 ##
