--- a/stable/grafana/values.yaml
+++ b/stable/grafana/values.yaml
@@ -208,7 +208,7 @@ server:
     ## Ref1: http://docs.grafana.org/reference/http_api/#create-data-source
     ## Ref2: https://github.com/grafana/grafana/issues/1789
     ##
-    # datasource:
+    datasource:
       ## The datasource name.
       ## Default: default
       name: default
@@ -222,20 +222,20 @@ server:
       ## the right datasource name and its port ahead. Check kubernetes
       ## dashboard or describe the service should fulfill the requirements.
       ## Synatx like `http://<release name>-<server name>:<port number>
-      ## Default: "http://limping-tiger-server"
+      ## Default: <empty>
       ##
-      # url: "http://limping-tiger-server"
+      url:
 
       ## The name of the database at the datasource.
       ## Required parameter when used with elasticsearch, which refers to the index_name
       ## Default: <empty>
-      # database:
+      database:
 
       ## Additional JSON data to be passed to the configuration of the datasource.
       ## The JSON data is passed to curl, therefore it needs proper quoting and
       ## escaping and needs to be on a single line. For example:
       ##  '\"esVersion\": 2, \"interval\": \"Daily\", \"timeField\": \"@timestamp\"'
-      # jsonData: null
+      jsonData: null
 
       ## Specify if Grafana has to go thru proxy to reach datasource
       ## Default: proxy
