Revert consolidation of containers versions

--- a/stable/artifactory/values.yaml
+++ b/stable/artifactory/values.yaml
@@ -98,6 +98,7 @@ nginx:
   replicaCount: 1
   image:
     repository: "docker.bintray.io/jfrog/nginx-artifactory-pro"
+    version: 5.8.3
     pullPolicy: IfNotPresent
   service:
     ## For minikube, set this to NodePort, elsewhere use LoadBalancer
