--- a/incubator/kubeless/templates/service-account.yaml
+++ b/incubator/kubeless/templates/service-account.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "fullname" . }}-controller-account
+  name: {{ template "kubeless.fullname" . }}-controller-account
   labels:
 {{ include "labels.standard" . | indent 4 }}
 {{- end }}
