--- a/incubator/kubeless/templates/ui-deployment.yaml
+++ b/incubator/kubeless/templates/ui-deployment.yaml
@@ -1,7 +1,8 @@
+{{- if .Values.ui.enabled }}
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ template "fullname" . }}-ui
+  name: {{ template "kubeless.fullname" . }}-ui
   labels:
 {{ include "labels.standard" . | indent 4 }}
     component: ui
@@ -11,7 +12,7 @@ spec:
     metadata:
       labels:
         component: ui
-        app: {{ template "name"  . }}
+        app: {{ template "kubeless.name"  . }}
         release: {{ .Release.Name | quote }}
     spec:
       containers:
@@ -23,12 +24,14 @@ spec:
           name: http
           protocol: TCP
         readinessProbe:
-          tcpSocket:
+          httpGet:
+            path: /
             port: http
           initialDelaySeconds: 5
           periodSeconds: 10
         livenessProbe:
-          tcpSocket:
+          httpGet:
+            path: /
             port: http
           initialDelaySeconds: 10
           periodSeconds: 20
@@ -39,3 +42,4 @@ spec:
         - proxy
         - "-p"
         - "8080"
+{{- end }}
