--- a/incubator/kubeless/templates/zk-svc.yaml
+++ b/incubator/kubeless/templates/zk-svc.yaml
@@ -11,5 +11,5 @@ spec:
     name: client
   selector:
     kubeless: zookeeper
-    app: {{ template "name"  . }}
+    app: {{ template "kubeless.name"  . }}
     release: {{ .Release.Name | quote }}
