--- a/incubator/kubeless/templates/cluster-role-binding.yaml
+++ b/incubator/kubeless/templates/cluster-role-binding.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ template "fullname" . }}-controller-deployer
+  name: {{ template "kubeless.fullname" . }}-controller-deployer
   labels:
 {{ include "labels.standard" . | indent 4 }}
 roleRef:
@@ -12,4 +12,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: controller-acct
-  {{- end}}
+{{- end}}
