--- a/incubator/kubeless/templates/kafka-headless-svc.yaml
+++ b/incubator/kubeless/templates/kafka-headless-svc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}-broker
+  name: {{ template "kubeless.fullname" . }}-broker
   labels:
 {{ include "labels.standard" . | indent 4 }}
 spec:
@@ -11,5 +11,5 @@ spec:
   clusterIP: None
   selector:
     kubeless: kafka
-    app: {{ template "name"  . }}
+    app: {{ template "kubeless.name"  . }}
     release: {{ .Release.Name | quote }}
