--- a/incubator/kubeless/templates/zk-headless-svc.yaml
+++ b/incubator/kubeless/templates/zk-headless-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}-zoo
+  name: {{ template "kubeless.fullname" . }}-zoo
   labels:
 {{ include "labels.standard" . | indent 4 }}
 spec:
@@ -13,5 +13,5 @@ spec:
   clusterIP: None
   selector:
     kubeless: zookeeper
-    app: {{ template "name"  . }}
+    app: {{ template "kubeless.name"  . }}
     release: {{ .Release.Name | quote }}
