[docker-registry] add authentication support (#3298)

--- a/stable/docker-registry/values.yaml
+++ b/stable/docker-registry/values.yaml
@@ -47,6 +47,7 @@ storage: filesystem
 # tlsSecretName: registry.docker.example.com
 secrets:
   haSharedSecret: ""
+  htpasswd: ""
 # Secrets for S3 access and secret keys
 #   s3:
 #     accessKey: ""
