--- a/stable/prometheus/values.yaml
+++ b/stable/prometheus/values.yaml
@@ -348,6 +348,19 @@ server:
   ## Maybe same with Ingress host name
   baseURL: ""
 
+  ## Prometheus global scraping configuration
+  ##
+  global:
+    ## How frequently to scrape targets by default
+    ##
+    scrape_interval: 1m
+    ## How long until a scrape request times out
+    ##
+    scrape_timeout: 10s
+    ## How frequently to evaluate rules
+    ##
+    evaluation_interval: 1m
+
   ## Additional Prometheus server container arguments
   ##
   extraArgs: {}
