Fix the database-storage mount point

--- a/incubator/couchdb/templates/statefulset.yaml
+++ b/incubator/couchdb/templates/statefulset.yaml
@@ -63,7 +63,7 @@ spec:
 {{ toYaml .Values.resources | indent 12 }}
           volumeMounts:
           - name: database-storage
-            mountPath: /var/lib/couchdb
+            mountPath: /opt/couchdb/data
           - name: config
             mountPath: /opt/couchdb/etc/default.d
         - name: couchdb-statefulset-assembler
