--- a/stable/traefik/templates/dns-provider-secret.yaml
+++ b/stable/traefik/templates/dns-provider-secret.yaml
@@ -11,6 +11,6 @@ metadata:
 type: Opaque
 data:
 {{- range $k, $v := (index .Values.acme.dnsProvider .Values.acme.dnsProvider.name) }}
-  {{ $k }}: {{ $v | b64enc }}
+  {{ $k }}: {{ $v | b64enc | quote }}
 {{- end }}
 {{- end }}
