fix: add private key to values. import-geth-account to geth nodes

--- a/incubator/ethereum/templates/geth-miner.deployment.yaml
+++ b/incubator/ethereum/templates/geth-miner.deployment.yaml
@@ -61,22 +61,19 @@ spec:
           mountPath: /root/.ethereum
         - name: config
           mountPath: /var/geth
-      - name: create-account
+      - name: import-geth-account
         image: {{ .Values.geth.image.repository }}:{{ .Values.geth.image.tag }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         command: ["/bin/sh"]
         args:
         - "-c"
-        - "printf '$(ACCOUNT_SECRET)\n$(ACCOUNT_SECRET)\n' | geth account new"
-        env:
-        - name: ACCOUNT_SECRET
-          valueFrom:
-            secretKeyRef:
-              name: {{ template "ethereum.fullname" . }}-geth-miner-secret
-              key: accountsecret
+        - "geth account import --password /root/.ethereum/account/accountSecret /root/.ethereum/account/accountPrivateKey"
         volumeMounts:
         - name: data
           mountPath: /root/.ethereum
+        - name: account
+          readOnly: true
+          mountPath: /root/.ethereum/account
       - name: get-bootnodes
         image: {{ .Values.geth.image.repository }}:{{ .Values.geth.image.tag }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
@@ -97,3 +94,6 @@ spec:
       - name: config 
         configMap:
           name: {{ template "ethereum.fullname" . }}-geth-config
+      - name: account
+        secret:
+          secretName: {{ template "ethereum.fullname" . }}-geth-account-secret
