--- a/incubator/gocd/Chart.yaml
+++ b/incubator/gocd/Chart.yaml
@@ -18,7 +18,7 @@ sources:
 maintainers:
 - name: arvindsv
   email: arvind@thoughtworks.com
-- name: GaneshSPatil
+- name: ganeshspatil
   email: ganeshpl@thoughtworks.com
 - name: varshavaradarajan
   email: varshavs@thoughtworks.com
