--- a/incubator/gocd/templates/ingress.yaml
+++ b/incubator/gocd/templates/ingress.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.server.ingress.enabled -}}
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1beta2
 kind: Ingress
 metadata:
   name: {{ template "gocd.fullname" . }}-server
