Cleanup and make labels consistent in anchore-engine deployments

--- a/incubator/anchore-engine/templates/core_deployment.yaml
+++ b/incubator/anchore-engine/templates/core_deployment.yaml
@@ -13,8 +13,8 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ template "fullname" . }}
-        role: core
+        app: "{{ template "fullname" . }}"
+        component: core
     spec:
       volumes:
         - name: config-volume
