--- a/incubator/ethereum/values.yaml
+++ b/incubator/ethereum/values.yaml
@@ -12,7 +12,7 @@ bootnode:
 ethstats:
   image:
     repository: ethereumex/eth-stats-dashboard
-    tag: latest
+    tag: v0.0.1
   webSocketSecret: my-secret-for-connecting-to-ethstats
   service:
     type: LoadBalancer
@@ -30,6 +30,9 @@ geth:
     # miner nodes
     replicaCount: 3
   genesis:
+    # geth genesis block
+    difficulty: '0x0400'
+    gasLimit: '0x8000000'
     networkId: 98052
   account:
     # account to seed and where mined Ether will be deposited
