Fix Busbar 'component' entry

--- a/incubator/busbar/templates/busbar-web-service.yaml
+++ b/incubator/busbar/templates/busbar-web-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ template "busbar.fullname" . }}-web
   labels:
     app: {{ template "busbar.name" . }}
-    component: {{ template "busbar.name" . }}-web
+    component: web
     release: "{{ .Release.Name }}"
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     heritage: "{{ .Release.Service }}"
@@ -13,7 +13,7 @@ metadata:
 spec:
   selector:
     app: {{ template "busbar.name" . }}
-    component: {{ template "busbar.name" . }}-web
+    component: web
     release: "{{ .Release.Name }}"
   type: LoadBalancer
   ports:
